--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.7",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
@@ -19,6 +20,7 @@
     "react-calendar": "^6.0.0",
     "react-day-picker": "^9.9.0",
     "react-dom": "19.1.0",
+    "sweetalert2": "^11.22.5",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
