--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@headlessui/react": "^2.2.7",
+    "@mui/material": "^7.3.2",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
@@ -20,6 +23,7 @@
     "react-calendar": "^6.0.0",
     "react-day-picker": "^9.9.0",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
     "sweetalert2": "^11.22.5",
     "tailwind-merge": "^3.3.1"
   },
