--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-day-picker": "^9.9.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.22.5",
     "tailwind-merge": "^3.3.1"
   },
