--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "google-one-tap": "^1.0.6",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "react": "19.1.0",
