--- a/package.json
+++ b/package.json
@@ -3,30 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "next dev --turbo",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.1",
     "@headlessui/react": "^2.2.7",
-    "@mui/material": "^7.3.2",
+    "@next/bundle-analyzer": "^16.0.10",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^5.90.2",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "google-one-tap": "^1.0.6",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "react": "19.1.0",
-    "react-calendar": "^6.0.0",
-    "react-day-picker": "^9.9.0",
     "react-dom": "19.1.0",
-    "react-icons": "^5.5.0",
     "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.22.5",
     "tailwind-merge": "^3.3.1"
